# movies-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.test  Doxyfile  README.md  conanfile.txt
source/: main.cpp
source/common/data/: movie.cpp  movie.h  seat.cpp  seat.h  session.cpp  session.h  theater.cpp  theater.h
source/common/domain/: app_error.h
source/common/presentation/: error_handler.cpp  error_handler.h
source/movies/get/data/: repository.cpp  repository.h  tests.cpp
source/movies/get/domain/: movie.h
source/movies/get/logic/: usecase.cpp  usecase.h
source/movies/get/presentation/: controller.cpp  controller.h
source/seats/book/data/: repository.cpp  repository.h  tests.cpp
source/seats/book/logic/: tests.cpp  usecase.cpp  usecase.h
source/seats/book/presentation/: controller.cpp  controller.h
source/seats/common/data/: find_session.cpp  find_session.h  tests.cpp
source/seats/getAvailable/data/: repository.cpp  repository.h  tests.cpp
source/seats/getAvailable/logic/: usecase.cpp  usecase.h
source/seats/getAvailable/presentation/: controller.cpp  controller.h
source/theaters/get/data/: repository.cpp  repository.h  tests.cpp
source/theaters/get/domain/: theater.h
source/theaters/get/logic/: usecase.cpp  usecase.h
source/theaters/get/presentation/: controller.cpp  controller.h
